@startuml
class Menu
class Campo
class Control
class Personaje
class Colision
class Sonido
class Vida
class Juego
class sf_RenderWindow
class Elemento

class Menu {
  +Dibujar(window: sf::RenderWindow): void
  +Actualizar(): void
  +ObtenerFont(): sf::Font&
  +IniciarJuego(): bool
  +AjustarImagen(): void
}

class Campo {
  +Dibujar(window: sf::RenderWindow): void
  +CambiarImagen(archivo: string): void
  +CargarFondo(): void
}

class Control {
  +LeerTeclado(tecla: sf::Keyboard::Key): void
  +ConfigurarTeclas(): void
}

class Personaje {
  +Dibujar(window: sf::RenderWindow): void
  +Actualizar(): void
  +MoverDerecha(): void
  +MoverIzquierda(): void
  +IniciarAtaque(): void
  +DefenderAtaque(): void
  +RecibirDano(cantidad: int): void
  +ObtenerVida(): int
  +ObtenerPosicion(): sf::Vector2f
}

class Colision {
  +ManejarColision(p1: Personaje, p2: Personaje): void
  +DetectarColision(p1: Personaje, p2: Personaje): bool
  +SepararPersonajes(p1: Personaje, p2: Personaje): void
}

class Vida {
  +ActualizarBarra(): void
  +MostrarVida(window: sf::RenderWindow): void
  +ReducirVida(cantidad: int): void
  +CurarVida(cantidad: int): void
  +ObtenerVidaActual(): int
}

class Sonido {
  +ReproducirMusica(nombre: string): void
  +DetenerMusica(): void
  +PausarMusica(): void
  +CargarAudio(ruta: string): void
  +ReproducirEfecto(nombre: string): void
}

class Juego {
  +IniciarJuego(): void
  +ManejarEventos(): void
  +ActualizarJuego(): void
  +RenderizarJuego(): void
  +VerificarVictoria(): void
  +ReiniciarJuego(): void
  +CambiarEstado(): void
}

class sf_RenderWindow {
  <<SFML>>
  +Draw(): void
  +Display(): void
  +Clear(): void
}

class Elemento {
  +Inicializar(): void
  +Actualizar(): void
  +Destruir(): void
}

Menu "1" o-- "1" Sonido
Personaje "1" *-- "1" Control
Personaje "1" *-- "1" Vida
Personaje "1" *-- "*" Sonido
Campo --|> sf_RenderWindow
Menu --|> sf_RenderWindow
Vida --|> sf_RenderWindow
Personaje --|> sf_RenderWindow
Menu --|> Elemento
Campo --|> Elemento
Control --|> Elemento
Personaje --|> Elemento
Colision --|> Elemento
Vida --|> Elemento
Sonido --|> Elemento
Juego "1" *-- "1" Menu
Juego "1" *-- "1" Campo
Juego "1" *-- "2" Personaje
Juego "1" *-- "1" Colision
Juego "1" *-- "1" Sonido
Juego "1" *-- "1" sf_RenderWindow
Juego --|> Elemento
@enduml
